# tabulate

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  clang-format.bash  generate-single-include.bash  single_include.json  tabulate.pri  tabulateConfig.cmake.in
include/tables/: align.hpp  cell.hpp  color.hpp  font_align.hpp  font_style.hpp  format.hpp  row.hpp  table.hpp
include/tabulate/: asciidoc_exporter.hpp  cell.hpp  color.hpp  column.hpp  column_format.hpp  exporter.hpp  font_align.hpp  font_style.hpp  format.hpp  latex_exporter.hpp  main.cpp  markdown_exporter.hpp  printer.hpp  row.hpp  table.hpp  table_internal.hpp  tabulate.hpp  utf8.hpp
include/tbl/: cell.hpp  color.hpp  font_align.hpp  font_style.hpp  format.hpp  main.cpp  row.hpp  table.hpp
samples/: CMakeLists.txt  asciidoc_export.cpp  class_diagram.cpp  colors.cpp  employees.cpp  font_styles.cpp  iterators.cpp  latex_export.cpp  logo.cpp  mario.cpp  markdown_export.cpp  movies.cpp  no_trim.cpp  padding.cpp  refresh_table.cpp  runic.cpp  shape.cpp  string_view_in_row.cpp  summary.cpp  unicode.cpp  universal_constants.cpp  word_wrapping.cpp
single_include/tabulate/: main  main.cpp  tabulate.hpp
